--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,25 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Do you need an api for your new project?"
     />
+    <meta name="author" content="Deniz Artun Aydın" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Next Project API " />
+    <meta
+      property="og:description"
+      content="Do you need an api for your new project?"
+    />
+    <meta
+      property="og:image"
+      content="https://next-project-api.vercel.app/logo-ogp.jpg"
+    />
+    <meta property="og:url" content="https://next-project-api.vercel.app/" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
