--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <meta name="author" content="Deniz Artun Aydın" />
 
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Next Project API " />
+    <meta property="og:title" content="Next Project API" />
     <meta
       property="og:description"
       content="Do you need an api for your new project?"
@@ -39,7 +39,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Next Project API</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
