--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,10 @@
     <meta name="author" content="Deniz Artun Aydın" />
 
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Next Project API" />
+    <meta
+      property="og:title"
+      content="Do you need an api for your new project?"
+    />
     <meta
       property="og:description"
       content="Do you need an api for your new project?"
